--- a/Client/src/app/admin-components/update-product/update-product.component.html
+++ b/Client/src/app/admin-components/update-product/update-product.component.html
@@ -24,17 +24,18 @@
                 </div>
                 <div class="mb-3">
                     <label for="animal" class="form-label">Select Animal Type</label>
-                    <select class="form-select" id="animal" name="animal" required>
+                    <select class="form-select" id="animal" name="animal" [(ngModel)]="selectedProduct.animal" required>
                         <option value="Dog">Dog</option>
                         <option value="Cat">Cat</option>
                     </select>
                 </div>
                 <div class="mb-3">
                     <label for="category" class="form-label">Select Category</label>
-                    <select class="form-select" id="category" name="category" required>
-                        <option value="Dog">Food</option>
-                        <option value="Cat">Toy</option>
-                        <option value="Cat">Upholstery</option>
+                    <select class="form-select" id="category" name="category" [(ngModel)]="selectedProduct.category"
+                        required>
+                        <option value="Food">Food</option>
+                        <option value="Toy">Toy</option>
+                        <option value="Upholstery">Upholstery</option>
                     </select>
                 </div>
                 <div class="mb-3">
